fixed shadow on mobile dropdown

--- a/scss/_a-global-variables.scss
+++ b/scss/_a-global-variables.scss
@@ -345,7 +345,7 @@ $list-group-item-padding-x: $input-btn-padding-x;
 // M. Box shadows
 //////////////////////////////////////// 
 
-$box-shadow-opacity: 0.3;
+$box-shadow-opacity: 0.15;
 
 $box-shadow-sm: 0 0 .5rem rgba($black, $box-shadow-opacity);
 $box-shadow: 0 0 1rem rgba($black, $box-shadow-opacity);
